# Presence-rewrite-rust

./: Cargo.toml  database.db
src/: main.rs
src/assets/: mod.rs
src/database/: 00_init.sql  manage_db.rs  mod.rs  models.rs
src/view/: dashboard.hbs  index.hbs  login.hbs  mod.rs
src/view/components/: style_dashboard.hbs
