[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.7.5"
axum-template = { version = "2.3.0", features = ["handlebars"] }
chrono = "0.4.38"
handlebars = "5.1.2"
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }


[profile.release]
lto = true
panic = "abort"
strip = true
